include init.aokp.rc

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -244,7 +244,7 @@ on post-fs-data
     #setprop vold.post_fs_data_done 1
 
 # Include extra init file
-    import /init.cm.rc
+    import /init.aokp.rc
 
 on boot
 # basic network init
