--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -284,7 +284,7 @@ on post-fs-data
     #setprop vold.post_fs_data_done 1
 
 # Include extra init file
-    import /init.aokp.rc
+    import /init.aicp.rc
 
 on boot
     # interactive governor
